--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=5000
 MONGODB_URI=mongodb+srv://kaankyt1:Adanademir1.@whatsapp-cluster-v2.du2ij.mongodb.net/?retryWrites=true&w=majority&appName=WhatsApp-Cluster-v2 
+VITE_API_URL=http://localhost:5000/api
